--- a/index.html
+++ b/index.html
@@ -9,33 +9,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              brand: {
-                50: '#f0fdf4',
-                100: '#dcfce7',
-                200: '#bbf7d0',
-                300: '#86efac',
-                400: '#4ade80',
-                500: '#22c55e',
-                600: '#16a34a',
-                700: '#15803d',
-                800: '#166534',
-                900: '#14532d',
+              bg: {
+                900: 'rgb(var(--bg-900) / <alpha-value>)',
+                800: 'rgb(var(--bg-800) / <alpha-value>)',
+                700: 'rgb(var(--bg-700) / <alpha-value>)',
               },
-              dark: {
-                900: '#0f172a',
-                800: '#1e293b',
-                700: '#334155',
+              text: {
+                100: 'rgb(var(--text-100) / <alpha-value>)',
+                300: 'rgb(var(--text-300) / <alpha-value>)',
+                500: 'rgb(var(--text-500) / <alpha-value>)',
+              },
+              primary: {
+                400: 'rgb(var(--primary-400) / <alpha-value>)',
+                500: 'rgb(var(--primary-500) / <alpha-value>)',
+                600: 'rgb(var(--primary-600) / <alpha-value>)',
+                900: 'rgb(var(--primary-900) / <alpha-value>)',
+              },
+              secondary: {
+                400: 'rgb(var(--secondary-400) / <alpha-value>)',
+                500: 'rgb(var(--secondary-500) / <alpha-value>)',
               }
             },
             animation: {
               'fade-in': 'fadeIn 0.3s ease-out',
               'slide-up': 'slideUp 0.4s ease-out',
+              'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
             },
             keyframes: {
               fadeIn: {
@@ -52,23 +57,98 @@
       }
     </script>
     <style>
-      body {
-        background-color: #0f172a; /* dark-900 */
-        color: #f8fafc;
+      :root {
+        /* Default: Sunset Theme */
+        --bg-900: 15 23 42;    /* Slate 900 */
+        --bg-800: 30 41 59;    /* Slate 800 */
+        --bg-700: 51 65 85;    /* Slate 700 */
+        
+        --text-100: 241 245 249; /* Slate 100 */
+        --text-300: 203 213 225; /* Slate 300 */
+        --text-500: 100 116 139; /* Slate 500 */
+
+        --primary-400: 232 121 249; /* Fuchsia 400 */
+        --primary-500: 217 70 239;  /* Fuchsia 500 */
+        --primary-600: 192 38 211;  /* Fuchsia 600 */
+        --primary-900: 112 26 117;  /* Fuchsia 900 */
+
+        --secondary-400: 251 146 60; /* Orange 400 */
+        --secondary-500: 249 115 22; /* Orange 500 */
       }
+
+      .theme-ocean {
+        --bg-900: 8 47 73;     /* Sky 950 */
+        --bg-800: 12 74 110;   /* Sky 900 */
+        --bg-700: 3 105 161;   /* Sky 700 */
+
+        --text-100: 240 249 255; /* Sky 50 */
+        --text-300: 186 230 253; /* Sky 200 */
+        --text-500: 125 211 252; /* Sky 300 */
+
+        --primary-400: 34 211 238;  /* Cyan 400 */
+        --primary-500: 6 182 212;   /* Cyan 500 */
+        --primary-600: 8 145 178;   /* Cyan 600 */
+        --primary-900: 21 94 117;   /* Cyan 900 */
+
+        --secondary-400: 96 165 250; /* Blue 400 */
+        --secondary-500: 59 130 246; /* Blue 500 */
+      }
+
+      .theme-forest {
+        --bg-900: 2 44 34;     /* Emerald 950 */
+        --bg-800: 6 78 59;     /* Emerald 900 */
+        --bg-700: 5 150 105;   /* Emerald 600 */
+
+        --text-100: 236 253 245; /* Emerald 50 */
+        --text-300: 167 243 208; /* Emerald 200 */
+        --text-500: 110 231 183; /* Emerald 300 */
+
+        --primary-400: 74 222 128;  /* Green 400 */
+        --primary-500: 34 197 94;   /* Green 500 */
+        --primary-600: 22 163 74;   /* Green 600 */
+        --primary-900: 20 83 45;    /* Green 900 */
+
+        --secondary-400: 163 230 53; /* Lime 400 */
+        --secondary-500: 132 204 22; /* Lime 500 */
+      }
+
+      .theme-dream {
+        --bg-900: 46 16 101;    /* Violet 950 */
+        --bg-800: 76 29 149;    /* Violet 900 */
+        --bg-700: 109 40 217;   /* Violet 700 */
+
+        --text-100: 245 243 255; /* Violet 50 */
+        --text-300: 221 214 254; /* Violet 200 */
+        --text-500: 167 139 250; /* Violet 400 */
+
+        --primary-400: 192 132 252; /* Purple 400 */
+        --primary-500: 168 85 247;  /* Purple 500 */
+        --primary-600: 147 51 234;  /* Purple 600 */
+        --primary-900: 88 28 135;   /* Purple 900 */
+
+        --secondary-400: 244 114 182; /* Pink 400 */
+        --secondary-500: 236 72 153;  /* Pink 500 */
+      }
+
+      body {
+        background-color: rgb(var(--bg-900));
+        color: rgb(var(--text-100));
+        transition: background-color 0.5s ease, color 0.5s ease;
+      }
+      
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
         width: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b; 
+        background: rgb(var(--bg-800)); 
       }
       ::-webkit-scrollbar-thumb {
-        background: #334155; 
+        background: rgb(var(--bg-700)); 
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #475569; 
+        background: rgb(var(--primary-500) / 0.5); 
       }
     </style>
   <script type="importmap">
